# cli-forge

./: .gitignore  README.md  planning-brief.md
cli-forge/: SKILL.md  planning-brief.md
cli-forge-description/: SKILL.md  planning-brief.md
cli-forge-description/instructions/: add-feature.md  new.md
cli-forge-description/templates/: README.md.tpl  SKILL.md.tpl  stream.rs.tpl
cli-forge-design/: SKILL.md  planning-brief.md
cli-forge-design/contracts/: design-contract.yml.tpl
cli-forge-design/instructions/: design-contract.md
cli-forge-distribute/: SKILL.md  planning-brief.md  shared-planning-brief.md
cli-forge-distribute/contracts/: validation-report.yml.tpl
cli-forge-extend/: SKILL.md
cli-forge-extend/contracts/: extend-receipt.yml.tpl
cli-forge-intake/: SKILL.md  planning-brief.md
cli-forge-plan/: SKILL.md  planning-brief.md
cli-forge-publish/: SKILL.md  planning-brief.md  shared-planning-brief.md
cli-forge-publish-npm/: SKILL.md
cli-forge-scaffold/: SKILL.md  planning-brief.md
cli-forge-takeover/: SKILL.md  planning-brief.md
cli-forge-validate/: SKILL.md  planning-brief.md
contracts/: extend-receipt.yml.tpl  scaffold-receipt.yml.tpl
templates/: README.md
templates/daemon/: Cargo.toml
templates/daemon/assets/: daemon-contract.md
templates/daemon/src/: daemon.rs  lifecycle.rs  main.rs  protocol.rs
templates/daemon/src/cli/: restart.rs  start.rs  status.rs  stop.rs
templates/daemon/src/ipc/: client.rs  mod.rs
templates/daemon/src/transport/: stdio.rs  websocket.rs
templates/daemon/tests/: protocol_tests.rs
(+70 files in other folders)
