[package]
name = "daemon-template"
version = "0.1.0"
edition = "2021"
description = "Daemon template with JSON-RPC app server protocol"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
jsonrpc-core = "18.0"
jsonrpc-server-utils = "18.0"
jsonwebtoken = "9.0"
rustls = "0.21"
bytes = "1.0"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "daemon"
path = "src/main.rs"
